Corrijindo testes.yml

--- a/.github/workflows/testes.yml
+++ b/.github/workflows/testes.yml
@@ -1,7 +1,10 @@
-Testes actions:
-  on:
-    push:
-    workflow_dispatch:
+name: Testes
+
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
   test:
