--- a/.github/workflows/testes.yml
+++ b/.github/workflows/testes.yml
@@ -1,4 +1,4 @@
-name: Testes
+name: Testes de CI
 
 on:
   push:
@@ -34,9 +34,9 @@ jobs:
           make test
       - name: Verificar typagem dos arquivos
         run: |
-          make typerig
+          make typecheck
         env:
-            GROQ_API_KEY : ${{ secrets.GROQ_API_KEY }}
-            FIRECRAWL_API_KEY : ${{ secrets.FIRECRAWL_API_KEY }}
-            SEARCHAPI_API_KEY : ${{ secrets.SEARCHAPI_API_KEY }}
-            TAVILY_API_KEY : ${{ secrets.TAVILY_API_KEY }}
+            GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
+            FIRECRAWL_API_KEY: ${{ secrets.FIRECRAWL_API_KEY }}
+            SEARCHAPI_API_KEY: ${{ secrets.SEARCHAPI_API_KEY }}
+            TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
