--- a/.github/workflows/testes.yml
+++ b/.github/workflows/testes.yml
@@ -23,6 +23,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           make install
+      
+      - name: Configurar variáveis de ambiente
+        run: |
+          echo "GROQ_API_KEY=${{ secrets.GROQ_API_KEY }}" >> $GITHUB_ENV
+          echo "FIRECRAWL_API_KEY=${{ secrets.FIRECRAWL_API_KEY }}" >> $GITHUB_ENV
+          echo "SEARCHAPI_API_KEY=${{ secrets.SEARCHAPI_API_KEY }}" >> $GITHUB_ENV
+          echo "TAVILY_API_KEY=${{ secrets.TAVILY_API_KEY }}" >> $GITHUB_ENV
       - name: Verificar formação dos arquivos
         run: |
           make format
