--- a/.github/workflows/testes.yml
+++ b/.github/workflows/testes.yml
@@ -41,9 +41,5 @@ jobs:
           make test
       - name: Verificar typagem dos arquivos
         run: |
-          make typecheck
-        env:
-            GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
-            FIRECRAWL_API_KEY: ${{ secrets.FIRECRAWL_API_KEY }}
-            SEARCHAPI_API_KEY: ${{ secrets.SEARCHAPI_API_KEY }}
-            TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
+          make typepyright
+
